--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,8 @@
 {
   "NULL":"NULL",
   "DEFAULT": {
-    "PAGETITLE": "ITBA IEEE Stud. Branch"
+    "PAGETITLE": "ITBA IEEE Stud. Branch",
+    "PAGEDESCRIPTION": "Official website of the IEEE ITBA Student Branch",
   },
   "HOME": {
     "TITLE": "Student Branch",
@@ -335,6 +336,7 @@
   },
   "ABOUTUS": {
     "PAGETITLE": "ITBA IEEE | About us",
+    "PAGEDESCRIPTION": "IEEE ITBA is a non-profit student organization that represents the IEEE at the Technological Institute of Buenos Aires.",
     "US": {
       "TITLE": "Who we are",
       "TEXT": "IEEE-ITBA is a non-profit student organization that represents the IEEE at the Technological Institute of Buenos Aires."
@@ -349,10 +351,14 @@
     }
   },
   "TEAM": {
+    "PAGETITLE": "ITBA IEEE | Team",
+    "PAGEDESCRIPTION": "IEEE ITBA is based on the hard work of our members in their different fields, get to know them.",
     "TITLE": "Team",
     "SUBTITLE": "IEEE ITBA is based on the hard work of our members in their different fields, get to know them."
   },
   "NEWS": {
+    "PAGETITLE": "ITBA IEEE | News",
+    "PAGEDESCRIPTION": "Find out the latest technological and scientific news!",
     "OF": "of",
     "MORENEWS": "View more news",
     "RECOMMENDED": "Recommended news",
@@ -360,6 +366,8 @@
     "EDIT-NEW": "Edit news"
   },
   "IEEEXTREME": {
+    "PAGETITLE": "ITBA IEEE | IEEExtreme",
+    "PAGEDESCRIPTION": "IEEExtreme is an international programming competition that lasts 24 hours. It is organized by IEEE-ITBA and is the most important in the country.",
     "FACTS": {
       "EDITIONS": "Past editions",
       "HOURS": "long",
@@ -385,6 +393,8 @@
     }
   },
   "BITCUP": {
+    "PAGETITLE": "ITBA IEEE | Bit Cup",
+    "PAGEDESCRIPTION": "The Bit Cup is an open and free programming competition organized by IEEE ITBA where participants attempt to solve several challenges within a limited time.",
     "DESCRIPTION": "Description",
     "DESCRIPTION-TEXT": "The Bit Cup is an open and free programming competition organized by IEEE ITBA where participants attempt to solve several challenges within a limited time. You can use it as practice for the IEEEXtreme and enter the world of competitive programming!",
     "FORMAT": "Format",
@@ -416,6 +426,8 @@
         "SOCIAL": "Social Media"
     },
   "PYTHONCOURSES": {
+    "PAGETITLE": "ITBA IEEE | Introductory Python Course",
+    "PAGEDESCRIPTION": "Introductory Python course organized by IEEE ITBA. Learn the basic concepts of programming and take your first steps in Python.",
     "CLASSES": {
       "C1": "Introduction to Python programming, Variables, Operators, Control Flow (if-else, while and for loop), Functions",
       "C2": "Data Types:(int, float, string, boolean), Data type operations, Lists, List operations, Text file manipulation",
@@ -505,6 +517,8 @@
     }
   },
   "DATAANALYSIS": {
+    "PAGETITLE": "ITBA IEEE | Data Analysis in Python Course",
+    "PAGEDESCRIPTION": "Data Analysis in Python course organized by IEEE ITBA. Learn how to use Python for data analysis and visualization.",
     "CLASSES": {
       "C1": "Introduction to libraries (review), Writing and reading of Excel and CSV files and Data manipulation with Pandas",
       "C2": "Introduction to matplotlib, Data visualization, Customization of plots and graphs and Application cases",
@@ -561,6 +575,8 @@
     "ACTUAL": "CURRENT"
   },
   "CONTACT": {
+    "PAGETITLE": "ITBA IEEE | Contact",
+    "PAGEDESCRIPTION": "Contact us for any questions or inquiries. We will get back to you as soon as possible.",
     "TITLE": "Contact",
     "SUBTITLE": "Complete the following information, we will contact you shortly.",
     "DESTINATION": "Send to",
@@ -594,6 +610,8 @@
     "CONTACTUS": "Contact us"
   },
   "WRITE-NEW": {
+    "PAGETITLE": "ITBA IEEE | Write News",
+    "PAGEDESCRIPTION": "Write news for IEEE ITBA. Share your knowledge with the community.",
     "TITLE": "Write News",
     "TITLE2": "Title",
     "POMPADOUR": "Pompadour",
@@ -608,6 +626,10 @@
     "FIRST_PARAGRAPH": "First paragraph over image",
     "PUBLISH_NOW": "Publish now",
     "PROGRAM_DATE": "Program publish date"
+  },
+  "EDIT-NEW": {
+    "PAGETITLE": "ITBA IEEE | Edit News",
+    "PAGEDESCRIPTION": "Edit news for IEEE ITBA."
   },
     "AUTH": {
         "LOGIN": {
@@ -632,9 +654,12 @@
       "DISABLED_USER": "User has been disabled"
     },
     "SUCCESS": "Welcome to IEEE!",
-    "PAGETITLE": "Log in to IEEE"
+    "PAGETITLE": "Log in to IEEE",
+    "PAGEDESCRIPTION": "Log in to IEEE ITBA."
   },
   "REGISTER": {
+    "PAGETITLE": "ITBA IEEE | Register",
+    "PAGEDESCRIPTION": "Register to IEEE ITBA. Join our community!",
     "TITLE": "Register",
     "FULL_NAME": "Full Name",
     "EMAIL": "Email",
@@ -665,6 +690,7 @@
   "RAS": {
     "TITLE": "IEEE ITBA",
     "PAGETITLE": "ITBA IEEE | RAS Student Branch Chapter",
+    "PAGEDESCRIPTION": "IEEE ITBA RAS Student Branch Chapter",
     "SUBTITLE": "RAS Student Branch Chapter",
     "EVENTS": "Events",
     "TEAM": {
@@ -691,6 +717,8 @@
   },
 
   "EMB": {
+    "PAGETITLE": "ITBA IEEE | EMB Student Branch Chapter",
+    "PAGEDESCRIPTION": "IEEE ITBA EMB Student Branch Chapter",
     "TITLE": "IEEE ITBA",
     "SUBTITLE": "EMB Student Branch Chapter",
     "EVENTS": "Events",
@@ -715,6 +743,8 @@
     }
   },
   "ERROR404": {
+    "PAGETITLE": "ITBA IEEE | Page not found",
+    "PAGEDESCRIPTION": "Page not found - IEEE ITBA",
     "TITLE": "Page not found",
     "APOLOGY": "We're sorry, the page you requested doesn't exist or some other error occurred",
     "INDICATION": "Please go back to the home page",
@@ -722,6 +752,8 @@
   },
   "WIP": "Site under construction",
   "IOT": {
+    "PAGETITLE": "ITBA IEEE | IoT Workshop",
+    "PAGEDESCRIPTION": "IoT Workshop organized by IEEE ITBA. Learn to control a robotic arm using Internet of Things (IoT) and apply your knowledge in practice.",
     "TITLE": "IoT Workshop",
     "ENROLL": "Enroll now!",
     "DESC": {
@@ -751,6 +783,7 @@
   "ASIMOVCUP": {
     "TITLE": "Asimov Cup",
     "PAGETITLE": "ITBA IEEE | Asimov CUP",
+    "PAGEDESCRIPTION": "Asimov Cup is a robotics competition open to the general public that takes place at ITBA.",
     "ENROLLBUTTON": "Enroll now!",
     "DOWNLOAD_RULEBOOK": "Download rulebook",
     "CATEGORIES": {
@@ -850,6 +883,8 @@
     "SPONSORS": "Sponsors"
   },
   "TYPESCRIPT": {
+    "PAGETITLE": "ITBA IEEE | Typescript Course",
+    "PAGEDESCRIPTION": "Typescript Course organized by IEEE ITBA. Learn the basics of programming with the TypeScript language.",
     "TITLE": "Typescript Course",
     "DESCRIPTION": {
       "TITLE": "Description",
@@ -967,6 +1002,7 @@
   },
   "WIE": {
     "PAGETITLE": "ITBA IEEE | WIE Branch Student Chapter",
+    "PAGEDESCRIPTION": "IEEE ITBA WIE Branch Student Chapter",
     "WHATIS": {
       "TITLE": "What is IEEE WIE ITBA?",
       "CONTENT": "IEEE WIE ITBA is the IEEE ITBA Student Branch's WIE Affinity Group",
@@ -1034,6 +1070,8 @@
     "ABOUT": "A technology-focused organization made up of students and alumni of ITBA, dedicated to inspiring and educating in various areas of technology related to software engineering and technology."
   },
   "ADMIN": {
+    "PAGETITLE": "ITBA IEEE | Admin panel",
+    "PAGEDESCRIPTION": "IEEE ITBA Admin panel",
     "TITLE": "Admin panel",
     "USERTAB": {
       "TITLE": "Users",
@@ -1054,6 +1092,14 @@
       }
     }
   },
+  "SPONSORS": {
+    "PAGETITLE": "ITBA IEEE | Sponsors",
+    "PAGEDESCRIPTION": "IEEE ITBA Sponsors"
+  },
+  "EVENTS": {
+     "PAGETITLE": "ITBA IEEE | Events",
+     "PAGEDESCRIPTION": "IEEE ITBA Events"
+  },
   "MONTH": {
     "0": "January",
     "1": "February",
@@ -1069,6 +1115,8 @@
     "11": "December"
     },
   "PROFILE": {
+    "PAGETITLE": "ITBA IEEE | Profile",
+    "PAGEDESCRIPTION": "IEEE ITBA Profile",
     "TABS": {
         "GENERAL": "General",
         "SECURITY": "Security"
