feat: team view and team request form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1077,6 +1077,9 @@
     },
     "COMMISSIONSTAB": {
       "TITLE": "Commissions"
+    },
+    "TEAMREQUESTSTAB": {
+      "TITLE": "Team requests"
     }
   },
   "MONTH": {
