--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1130,6 +1130,9 @@
     },
     "COMMISSIONSTAB": {
       "TITLE": "Comisiones"
+    },
+    "TEAMREQUESTSTAB": {
+      "TITLE": "Team requests"
     }
   },
   "MONTH": {
