feat: added news comments. Scroll and delete rules pending

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -419,7 +419,8 @@
     "MORENEWS": "Ver más noticias",
     "RECOMMENDED": "Noticias recomendadas",
     "RATING": "¿Que te pareció la noticia?",
-    "EDIT-NEW": "Editar noticia"
+    "EDIT-NEW": "Editar noticia",
+    "DELETE_COMMENT": "Borrar Comentario"
   },
   "IEEEXTREME": {
     "PAGETITLE": "ITBA IEEE | IEEExtreme",
