--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -363,7 +363,8 @@
     "MORENEWS": "View more news",
     "RECOMMENDED": "Recommended news",
     "RATING": "What do you think about the post?",
-    "EDIT-NEW": "Edit news"
+    "EDIT-NEW": "Edit news",
+    "DELETE_COMMENT": "Delete Comment"
   },
   "IEEEXTREME": {
     "PAGETITLE": "ITBA IEEE | IEEExtreme",
