--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -364,7 +364,8 @@
     "RECOMMENDED": "Recommended news",
     "RATING": "What do you think about the post?",
     "EDIT-NEW": "Edit news",
-    "DELETE_COMMENT": "Delete Comment"
+    "DELETE_COMMENT": "Delete Comment",
+    "COMMENT_BY": "Comment made by"
   },
   "IEEEXTREME": {
     "PAGETITLE": "ITBA IEEE | IEEExtreme",
