--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -426,6 +426,8 @@
   "IEEEXTREME": {
     "PAGETITLE": "ITBA IEEE | IEEExtreme",
     "PAGEDESCRIPTION": "IEEExtreme es una competencia de programación internacional que dura 24 horas. Es organizada por IEEE-ITBA y es la más importante del país.",
+    "MORE_INFO": "Para más información, ",
+    "CLICK_ME": "clickeame!",
     "FACTS": {
       "EDITIONS": "Ediciones realizadas",
       "HOURS": "de competencia",
