--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -526,6 +526,7 @@
     "CLASSES": {
       "C1": "Introduction to libraries (review), Writing and reading of Excel and CSV files and Data manipulation with Pandas",
       "C2": "Introduction to matplotlib, Data visualization, Customization of plots and graphs and Application cases",
+      "C3": "Introduction to artificial intelligence and related concepts, Regression and classification models, Datasets and metrics, Polynomial regression, Naive Bayes and Neural networks.",
       "TITLE": "Class "
     },
     "SOLUTION": "Solutionary",
