feat(ieeextreme): updated ieeextreme service and added transitions to ranking

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -379,6 +379,7 @@
         "TITLE": "IEEExtreme ITBA Ranking",
         "TEAM-NAME": "Team",
         "ITBA-RANK": "ITBA Rank",
+        "REGIONAL-RANK": "Regional Rank",
         "COUNTRY-RANK": "Country Rank",
         "GLOBAL-RANK": "Global Rank"
     },
