--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -435,6 +435,7 @@
           "TITLE": "Ranking IEEExtreme ITBA",
         "TEAM-NAME": "Equipo",
         "ITBA-RANK": "Ranking ITBA",
+        "REGIONAL-RANK": "Ranking Regional",
         "COUNTRY-RANK": "Ranking País",
         "GLOBAL-RANK": "Ranking Global"
       },
